ellipsisDrive/pigeon/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    ellipsis-drive: api
spec:
  replicas: 2
  selector:
    matchLabels:
      ellipsis-drive: api
  template:
    metadata:
      labels:
        ellipsis-drive: api
    spec:
      serviceAccountName: s3-access-sa
      containers:
      - name: api
        image: ghcr.io/ellipsis-drive/api:<<<version>>>
        resources:
          requests:
            cpu: 500m
        ports:
          - containerPort: 7556
        volumeMounts:
          - name: etmpfs
            mountPath: /mnt/etmpfs
          - name: finch-1
            mountPath: /mnt/finch
      imagePullSecrets:
        - name: ghcr-secret
      volumes:
        - name: etmpfs
          persistentVolumeClaim:
            claimName: etmpfs
        - name: finch-1
          persistentVolumeClaim:
            claimName: finch-1
