ellipsisDrive/pigeon/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: LoadBalancer
  selector:
    ellipsis-drive: api
  ports:
    - port: 7556
      targetPort: 7556
